syntax = "proto3";

package products;

option go_package = "m11ano.mipt_webdev_course.products.v1;productsv1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

// Products service
service Products {
  // Get items by IDs
  rpc ProductsByIDs (ProductsByIDsRequest) returns (ProductsByIDsResponse);
}


message ProductListItem {
  int64 id = 1;
  bool is_published = 2;
  string name = 3;
  string full_description = 4;
  string price = 5;
  int32 stock_available = 6;
  google.protobuf.StringValue image_preview_file_id = 7;
  string image_preview_file_url = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  google.protobuf.Timestamp deleted_at = 11;
}

message ProductsByIDsRequest {
  repeated int64 ids = 1;
}

message ProductsByIDsResponse {
  repeated ProductListItem items = 1;
}
